examples/apigatewayv2/deployment.yaml
apiVersion: apigatewayv2.aws.crossplane.io/v1alpha1
kind: Deployment
metadata:
  name: test-deployment
spec:
  forProvider:
    apiIdRef:
      name: test-api
    stageNameRef:
      name: test-stage
    region: us-west-2
