examples/apigatewayv2/route.yaml
apiVersion: apigatewayv2.aws.crossplane.io/v1alpha1
kind: Route
metadata:
  name: test-route
spec:
  forProvider:
    region: us-east-1
    apiIdRef:
      name: test-ws-api
    routeKey: "GET /newpath"
    # You'll need to update this to the ID (i.e. external name) of the
    # integration created by integration.yaml. References/Selectors
    # are also supported for Targets.
    target: "integrations/5kzavuj"
  providerConfigRef:
    name: example
